--- a/demo/index.html
+++ b/demo/index.html
@@ -69,7 +69,7 @@
             <div>
                 <div class="btn-group">
                     <a class="btn btn-link dropdown-toggle" data-toggle="dropdown">Ferramentas <i class="fa fa-angle-down"></i></a>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu dropdown-menu-right">
                         <li><a href="#"><i class="fa fa-bar-chart-o"></i>Analytics</a></li>
                         <li><a href="#"><i class="fa fa-money"></i>Billing Admin</a></li>
                         <li><a href="#"><i class="fa fa-gamepad"></i>Playground</a></li>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="client-selector btn-group">
                     <a class="btn btn-link dropdown-toggle" data-toggle="dropdown"><span id="selectedClientName">Livrarias Saraiva</span> <i class="fa fa-angle-down"></i></a>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu dropdown-menu-right">
                         <li>
                             <div class="form-group">
                                 <i class="fa fa-search"></i>
@@ -92,8 +92,8 @@
                     </ul>
                 </div>
                 <div class="user-area btn-group">
-                    <img class="dropdown-toggle" data-toggle="dropdown" src="//www.gravatar.com/avatar/c7790195a496a869aad0103fe338658f?s=32" alt="Guilherme Pacheco">
-                    <ul class="dropdown-menu">
+                    <img class="dropdown-toggle" data-toggle="dropdown" src="//www.gravatar.com/avatar/c7790195a496a869aad0103fe338658f?s=34" alt="Guilherme Pacheco">
+                    <ul class="dropdown-menu dropdown-menu-right">
                         <li><a href="#"><i class="fa fa-edit"></i>Editar perfil</a></li>
                         <li><a href="#"><i class="fa fa-cog"></i>Minha conta</a></li>
                         <li><a href="#"><i class="fa fa-dollar"></i>Faturas</a></li>
