--- a/demo/index.html
+++ b/demo/index.html
@@ -410,6 +410,45 @@
                         <li><a href="#">5</a></li>
                         <li><a href="#"><i class="fa fa-vw fa-angle-right"></i></a></li>
                     </ul>
+                    <div class="spacer"></div>
+                    <h5>Panels</h5>
+                    <hr>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Panel heading without title</div>
+                        <div class="panel-body">Panel content</div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading"><h3 class="panel-title">Panel title</h3></div>
+                        <div class="panel-body">Panel content</div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-body">Panel content</div>
+                        <div class="panel-footer">Panel footer</div>
+                    </div>
+                    <div class="panel panel-primary">
+                        <div class="panel-heading"><h3 class="panel-title">Panel title</h3></div>
+                        <div class="panel-body">Panel content</div>
+                    </div>
+                    <div class="panel panel-secondary">
+                        <div class="panel-heading"><h3 class="panel-title">Panel title</h3></div>
+                        <div class="panel-body">Panel content</div>
+                    </div>
+                    <div class="panel panel-success">
+                        <div class="panel-heading"><h3 class="panel-title">Panel title</h3></div>
+                        <div class="panel-body">Panel content</div>
+                    </div>
+                    <div class="panel panel-info">
+                        <div class="panel-heading"><h3 class="panel-title">Panel title</h3></div>
+                        <div class="panel-body">Panel content</div>
+                    </div>
+                    <div class="panel panel-warning">
+                        <div class="panel-heading"><h3 class="panel-title">Panel title</h3></div>
+                        <div class="panel-body">Panel content</div>
+                    </div>
+                    <div class="panel panel-danger">
+                        <div class="panel-heading"><h3 class="panel-title">Panel title</h3></div>
+                        <div class="panel-body">Panel content</div>
+                    </div>
                 </div>
             </div>
         </div>
