A bit of refactoring, fixed tables, made table-list

--- a/demo/index.html
+++ b/demo/index.html
@@ -357,6 +357,44 @@
                         </tbody>
                     </table>
                     <div class="spacer"></div>
+                    <h5>Table list</h5>
+                    <hr>
+                    <p>Make a list looks like a table.</p>
+                    <ul class="table-list table-list-striped table-list-hover">
+                        <li class="table-list-header">
+                            <div class="row">
+                                <div class="col-md-1">#</div>
+                                <div class="col-md-5">First Name</div>
+                                <div class="col-md-3">Last Name</div>
+                                <div class="col-md-3">Username</div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="row">
+                                <div class="col-md-1">1</div>
+                                <div class="col-md-5">Mark</div>
+                                <div class="col-md-3">Otto</div>
+                                <div class="col-md-3">@mdo</div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="row">
+                                <div class="col-md-1">2</div>
+                                <div class="col-md-5">Jacob</div>
+                                <div class="col-md-3">Thornton</div>
+                                <div class="col-md-3">@fat</div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="row">
+                                <div class="col-md-1">3</div>
+                                <div class="col-md-5">Larry</div>
+                                <div class="col-md-3">the Bird</div>
+                                <div class="col-md-3">@twitter</div>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="spacer"></div>
                     <h5>Progress bar</h5>
                     <hr>
                     <div class="progress">
