--- a/demo/index.html
+++ b/demo/index.html
@@ -395,6 +395,89 @@
                         </li>
                     </ul>
                     <div class="spacer"></div>
+                    <h5>Tree list</h5>
+                    <hr>
+
+                    <ul class="tree-list table-list open">
+                        <li class="tree">
+                            <div class="row">
+                                <div class="col-md-12 indent"><i class="tree-toggler open"></i> Categoria <small class="text-muted">10 produtos ativos</small></div>
+                            </div>
+                            <div class="row subtree">
+                                <div class="col-md-12">
+                                    <ul class="tree-list">
+                                        <li class="tree">
+                                            <div class="row active">
+                                                <div class="col-md-8 indent"><i class="tree-toggler open"></i> Subcategoria <small class="text-muted">6 produtos ativos</small></div>
+                                                <div class="col-md-2 bid-form">Mínimo</div>
+                                                <div class="col-md-2 bid-form">Sugerido</div>
+                                            </div>
+                                            <div class="row subtree">
+                                                <div class="col-md-12">
+                                                    <ul class="tree-list">
+                                                        <li class="tree">
+                                                            <div class="row">
+                                                                <div class="col-md-8 indent">Produtos com preço até R$ 100,00</div>
+                                                                <div class="col-md-2 text-muted">R$ 0,20</div>
+                                                                <div class="col-md-2 text-muted">R$ 0,23</div>
+                                                            </div>
+                                                            <div class="row">
+                                                                <div class="col-md-8 indent">Produtos com preço entre R$ 100,01 e R$ 500,00</div>
+                                                                <div class="col-md-2 text-muted">R$ 0,20</div>
+                                                                <div class="col-md-2 text-muted">R$ 0,23</div>
+                                                            </div>
+                                                            <div class="row">
+                                                                <div class="col-md-8 indent">Produtos com preço acima de R$ 500,01</div>
+                                                                <div class="col-md-2 text-muted">R$ 0,20</div>
+                                                                <div class="col-md-2 text-muted">R$ 0,23</div>
+                                                            </div>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="row subtree">
+                                <div class="col-md-12">
+                                    <ul class="tree-list">
+                                        <li class="tree">
+                                            <div class="row active">
+                                                <div class="col-md-8 indent"><i class="tree-toggler open"></i> Subcategoria <small class="text-muted">4 produtos ativos</small></div>
+                                                <div class="col-md-2 bid-form">Mínimo</div>
+                                                <div class="col-md-2 bid-form">Sugerido</div>
+                                            </div>
+                                            <div class="row subtree">
+                                                <div class="col-md-12">
+                                                    <ul class="tree-list">
+                                                        <li class="tree">
+                                                            <div class="row">
+                                                                <div class="col-md-8 indent">Produtos com preço até R$ 100,00</div>
+                                                                <div class="col-md-2 text-muted">R$ 0,20</div>
+                                                                <div class="col-md-2 text-muted">R$ 0,23</div>
+                                                            </div>
+                                                            <div class="row">
+                                                                <div class="col-md-8 indent">Produtos com preço entre R$ 100,01 e R$ 500,00</div>
+                                                                <div class="col-md-2 text-muted">R$ 0,20</div>
+                                                                <div class="col-md-2 text-muted">R$ 0,23</div>
+                                                            </div>
+                                                            <div class="row">
+                                                                <div class="col-md-8 indent">Produtos com preço acima de R$ 500,01</div>
+                                                                <div class="col-md-2 text-muted">R$ 0,20</div>
+                                                                <div class="col-md-2 text-muted">R$ 0,23</div>
+                                                            </div>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="spacer"></div>
                     <h5>Progress bar</h5>
                     <hr>
                     <div class="progress">
