--- a/demo/index.html
+++ b/demo/index.html
@@ -28,11 +28,11 @@
 <body>
     <div class="sidebar">
         <div class="btn-group sidebar-brand">
-            <a class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-angle-down"></i></a>
+            <a class="dropdown-toggle" data-toggle="dropdown"><img src="assets/logo-product.png" alt="Market"><i class="fa fa-angle-down"></i></a>
             <ul class="dropdown-menu">
+                <li><a href="#"><img src="assets/logo-product.png" alt="OnSite"></a></li>
+                <li><a href="#"><img src="assets/logo-product.png" alt="Mail"></a></li>
                 <li><a href="#"><img src="assets/logo-product.png" alt="Search"></a></li>
-                <li><a href="#"><img src="assets/logo-product.png" alt="Produto 2"></a></li>
-                <li><a href="#"><img src="assets/logo-product.png" alt="Produto 3"></a></li>
                 <li class="dropdown-submenu">
                     <a href="#" class="sidebar-header">Mais</a>
                     <ul class="dropdown-menu">
