Now different logo when product selector open

--- a/demo/no-sidebar.html
+++ b/demo/no-sidebar.html
@@ -12,7 +12,7 @@
     <div class="page-header">
         <div class="product-selector">
             <div class="btn-group">
-                <a class="dropdown-toggle" data-toggle="dropdown"><img src="assets/logo-chaordic.png" alt="Market"><i class="fa fa-angle-down"></i></a>
+                <a class="dropdown-toggle" data-toggle="dropdown"><img class="closed-logo" src="assets/logo-chaordic-closed.png" alt="Market"><img class="open-logo" src="assets/logo-chaordic-open.png" alt="Market"><i class="fa fa-angle-down"></i></a>
                 <ul class="dropdown-menu">
                     <li><a href="#"><img src="assets/logo-product.png" alt="OnSite"></a></li>
                     <li><a href="#"><img src="assets/logo-product.png" alt="Mail"></a></li>
