symbols added on menu

--- a/demo/index.html
+++ b/demo/index.html
@@ -30,9 +30,10 @@
         <div class="btn-group sidebar-brand">
             <a class="dropdown-toggle" data-toggle="dropdown"><img src="assets/logo-product.png" alt="Market"><i class="fa fa-angle-down"></i></a>
             <ul class="dropdown-menu">
-                <li><a href="#"><img src="assets/logo-product.png" alt="OnSite"></a></li>
-                <li><a href="#"><img src="assets/logo-product.png" alt="Mail"></a></li>
-                <li><a href="#"><img src="assets/logo-product.png" alt="Search"></a></li>
+                <li><a href="#"><img src="assets/onsite-symbol.png" alt="OnSite"><span>Onsite</span></a></li>
+                <li><a href="#"><img src="assets/mail-symbol.png" alt="Mail"><span>Mail</span></a></li>
+                <li><a href="#"><img src="assets/search-symbol.png" alt="Search"><span>Search</span></a></li>
+                <li><a href="#"><img src="assets/market-symbol.png" alt="Market"><span>Market</span></a></li>
                 <li class="dropdown-submenu">
                     <a href="#" class="sidebar-header">Mais</a>
                     <ul class="dropdown-menu">
