--- a/demo/index.html
+++ b/demo/index.html
@@ -330,10 +330,10 @@
                     <table class="table table-striped table-hover table-sortable">
                         <thead>
                             <tr>
-                                <th class="sort-by sort-desc"># <i class="sort-icon"></i></th>
-                                <th class="sort-by">First Name <i class="sort-icon"></i></th>
-                                <th class="sort-by">Last Name <i class="sort-icon"></i></th>
-                                <th class="sort-by">Username <i class="sort-icon"></i></th>
+                                <th class="sort-by sort-desc"># <i class="fa sort-icon"></i></th>
+                                <th class="sort-by">First Name <i class="fa sort-icon"></i></th>
+                                <th class="sort-by">Last Name <i class="fa sort-icon"></i></th>
+                                <th class="sort-by">Username <i class="fa sort-icon"></i></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -407,7 +407,7 @@
                         </li>
                         <li class="tree">
                             <div class="row">
-                                <div class="col-md-8 indent"><i class="tree-toggler open"></i> Categoria</div>
+                                <div class="col-md-8 indent"><i class="fa tree-toggler open"></i> Categoria</div>
                                 <div class="col-md-4 text-muted">15 produtos ativos</div>
                             </div>
                             <div class="row subtree">
@@ -437,7 +437,7 @@
                         </li>
                         <li class="tree">
                             <div class="row">
-                                <div class="col-md-8 indent"><i class="tree-toggler open"></i> Categoria</div>
+                                <div class="col-md-8 indent"><i class="fa tree-toggler open"></i> Categoria</div>
                                 <div class="col-md-4 text-muted">10 produtos ativos</div>
                             </div>
                             <div class="row subtree">
