--- a/demo/index.html
+++ b/demo/index.html
@@ -559,6 +559,40 @@
                         <div class="panel-heading"><h3 class="panel-title">Panel title</h3></div>
                         <div class="panel-body">Panel content</div>
                     </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading"><h3 class="panel-title">Panel with content and a table</h3></div>
+                        <div class="panel-body">Panel content</div>
+                        <table class="table table-striped table-hover table-sortable">
+                            <thead>
+                                <tr>
+                                    <th class="sort-by sort-desc"># <i class="fa sort-icon"></i></th>
+                                    <th class="sort-by">First Name <i class="fa sort-icon"></i></th>
+                                    <th class="sort-by">Last Name <i class="fa sort-icon"></i></th>
+                                    <th class="sort-by">Username <i class="fa sort-icon"></i></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Mark</td>
+                                    <td>Otto</td>
+                                    <td>@mdo</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>Jacob</td>
+                                    <td>Thornton</td>
+                                    <td>@fat</td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>Larry</td>
+                                    <td>the Bird</td>
+                                    <td>@twitter</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
