--- a/demo/index.html
+++ b/demo/index.html
@@ -324,6 +324,17 @@
                         <strong>Oh Snap!</strong> Change a few things up and try submitting again.
                     </div>
                     <div class="spacer"></div>
+                    <h5>Labels</h5>
+                    <hr>
+                    <div>
+                        <span class="label label-default">Default</span>
+                        <span class="label label-primary">Primary</span>
+                        <span class="label label-success">Success</span>
+                        <span class="label label-info">Info</span>
+                        <span class="label label-warning">Warning</span>
+                        <span class="label label-danger">Danger</span>
+                    </div>
+                    <div class="spacer"></div>
                     <h5>Table</h5>
                     <hr>
                     <table class="table table-striped table-hover table-sortable">
