--- a/demo/index.html
+++ b/demo/index.html
@@ -159,18 +159,30 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-4 form-group has-error">
+                            <div class="col-md-4 form-group has-success">
                                 <label>Default label</label>
                                 <input type="text" class="form-control" placeholder="Inline label example">
-                                <p class="help-block text-error">Error message, take action</p>
+                                <p class="help-block text-error">Success message, great!</p>
                             </div>
                             <div class="col-md-4 form-group has-warning">
                                 <label>Default label</label>
                                 <input type="text" class="form-control" placeholder="Inline label example">
                                 <p class="help-block text-warning">Warning message, are you sure?</p>
                             </div>
+                            <div class="col-md-4 form-group has-error">
+                                <label>Default label</label>
+                                <input type="text" class="form-control" placeholder="Inline label example">
+                                <p class="help-block text-error">Error message, take action</p>
+                            </div>
                         </div>
                         <div class="row">
+                            <div class="col-md-4 form-group">
+                                <label>Default label</label>
+                                <div class="input-group">
+                                    <span class="input-group-addon">R$</span>
+                                    <input type="text" class="form-control">
+                                </div>
+                            </div>
                             <div class="col-md-4 form-group">
                                 <label>Default label</label>
                                 <div class="input-group">
@@ -178,12 +190,31 @@
                                     <input type="text" class="form-control">
                                 </div>
                             </div>
-                            <div class="col-md-4 form-group">
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4 form-group has-success">
                                 <label>Default label</label>
                                 <div class="input-group">
                                     <span class="input-group-addon">R$</span>
                                     <input type="text" class="form-control">
                                 </div>
+                                <p class="help-block text-success">Success message, great!</p>
+                            </div>
+                            <div class="col-md-4 form-group has-warning">
+                                <label>Default label</label>
+                                <div class="input-group">
+                                    <span class="input-group-addon">www.</span>
+                                    <input type="text" class="form-control">
+                                </div>
+                                <p class="help-block text-warning">Warning message, are you sure?</p>
+                            </div>
+                            <div class="col-md-4 form-group has-error">
+                                <label>Default label</label>
+                                <div class="input-group">
+                                    <span class="input-group-addon">R$</span>
+                                    <input type="text" class="form-control">
+                                </div>
+                                <p class="help-block text-error">Error message, take action</p>
                             </div>
                         </div>
                     </form>
