--- a/demo/index.html
+++ b/demo/index.html
@@ -30,10 +30,10 @@
         <div class="btn-group sidebar-brand">
             <a class="dropdown-toggle" data-toggle="dropdown"><img src="assets/logo-product.png" alt="Market"><i class="fa fa-angle-down"></i></a>
             <ul class="dropdown-menu">
-                <li><a href="#"><img src="assets/onsite-symbol.png">Onsite</a></li>
-                <li><a href="#"><img src="assets/mail-symbol.png">Mail</a></li>
-                <li><a href="#"><img src="assets/search-symbol.png">Search</a></li>
-                <li><a href="#"><img src="assets/market-symbol.png">Market</a></li>
+                <li class="product"><a href="#"><img src="assets/onsite-symbol.png">Onsite</a></li>
+                <li class="product"><a href="#"><img src="assets/mail-symbol.png">Mail</a></li>
+                <li class="product"><a href="#"><img src="assets/search-symbol.png">Search</a></li>
+                <li class="product"><a href="#"><img src="assets/market-symbol.png">Market</a></li>
                 <li class="sidebar-header">Mais</li>
                 <li><a href="#"><i class="fa fa-puzzle-piece"></i>Integração</a></li>
                 <li><a href="#"><i class="fa fa-th-large"></i>Chaordic Central</a></li>
